// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite > v4-vite-plugin > css 1`] = `
"/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
page,.tw-root,:host {
    --font-sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
  }

view,text,:after,:before,::backdrop {
    box-sizing: border-box;
    border: 0 solid;
    margin: 0;
    padding: 0;
  }

::file-selector-button {
    box-sizing: border-box;
    border: 0 solid;
    margin: 0;
    padding: 0;
  }

html,:host {
    -webkit-text-size-adjust: 100%;
    tab-size: 4;
    line-height: 1.5;
    font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    font-family: var(--default-font-family, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
    font-feature-settings: normal;
    font-feature-settings: var(--default-font-feature-settings, normal);
    font-variation-settings: normal;
    font-variation-settings: var(--default-font-variation-settings, normal);
    -webkit-tap-highlight-color: transparent;
  }

hr {
    height: 0;
    color: inherit;
    border-top-width: 1px;
  }

abbr {
    -webkit-text-decoration: underline dotted;
    text-decoration: underline;
    text-decoration: underline dotted;
  }

h1,h2,h3,h4,h5,h6 {
    font-size: inherit;
    font-weight: inherit;
  }

a {
    color: inherit;
    -webkit-text-decoration: inherit;
    text-decoration: inherit;
  }

b,strong {
    font-weight: bolder;
  }

code,kbd,samp,pre {
    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
    font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace);
    font-feature-settings: normal;
    font-feature-settings: var(--default-mono-font-feature-settings, normal);
    font-variation-settings: normal;
    font-variation-settings: var(--default-mono-font-variation-settings, normal);
    font-size: 1em;
  }

small {
    font-size: 80%;
  }

sub,sup {
    vertical-align: baseline;
    font-size: 75%;
    line-height: 0;
    position: relative;
  }

sub {
    bottom: -.25em;
  }

sup {
    top: -.5em;
  }

table {
    text-indent: 0;
    border-color: inherit;
    border-collapse: collapse;
  }

:-moz-focusring {
    outline: auto;
  }

progress {
    vertical-align: baseline;
  }

summary {
    display: list-item;
  }

ol,ul,menu {
    list-style: none;
  }

img,svg,video,canvas,audio,iframe,embed,object {
    vertical-align: middle;
    display: block;
  }

img,video {
    max-width: 100%;
    height: auto;
  }

button,input,select,optgroup,textarea {
    font: inherit;
    font-feature-settings: inherit;
    font-variation-settings: inherit;
    letter-spacing: inherit;
    color: inherit;
    opacity: 1;
    background-color: rgba(0,0,0,0);
    border-radius: 0;
  }

::file-selector-button {
    font: inherit;
    font-feature-settings: inherit;
    font-variation-settings: inherit;
    letter-spacing: inherit;
    color: inherit;
    opacity: 1;
    background-color: rgba(0,0,0,0);
    border-radius: 0;
  }

select[multiple] optgroup,select[size] optgroup {
    font-weight: bolder;
  }

select[multiple] optgroup option,select[size] optgroup option {
    padding-left: 20px;
  }

::file-selector-button {
    margin-right: 4px;
  }

::placeholder {
    opacity: 1;
  }

@supports (not ((-webkit-appearance: -apple-pay-button))) or (contain-intrinsic-size: 1px) {
    ::placeholder {
      color: currentColor;
    }
  }

textarea {
    resize: vertical;
  }

::-webkit-search-decoration {
    -webkit-appearance: none;
  }

::-webkit-date-and-time-value {
    min-height: 1lh;
    text-align: inherit;
  }

::-webkit-datetime-edit {
    display: inline-flex;
  }

::-webkit-datetime-edit-fields-wrapper {
    padding: 0;
  }

::-webkit-datetime-edit {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-year-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-month-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-day-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-hour-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-minute-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-second-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-millisecond-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-datetime-edit-meridiem-field {
    padding-top: 0;
    padding-bottom: 0;
  }

::-webkit-calendar-picker-indicator {
    line-height: 1;
  }

:-moz-ui-invalid {
    box-shadow: none;
  }

button,input {
    appearance: button;
  }

::file-selector-button {
    appearance: button;
  }

::-webkit-inner-spin-button {
    height: auto;
  }

::-webkit-outer-spin-button {
    height: auto;
  }

.bg-_b_h123456_B {
    background-color: #123456;
  }

.text-_b_h123456_B {
    color: #123456;
  }
"
`;

exports[`vite > v4-vite-plugin > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-[#123456] text-[#123456] first-letter:marker:text-clip");
"
`;

exports[`vite > v4-vite-postcss > css 1`] = `
"/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
view,text,:after,:before,::backdrop {
  box-sizing: border-box;
  border: 0 solid;
  margin: 0;
  padding: 0;
}
.bg-_b_h123456_B {
  background-color: #123456;
}
.text-_b_h123456_B {
  color: #123456;
}
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter view::-webkit-details-marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter text::-webkit-details-marker {
      text-overflow: clip;
    }
.first-letter_cmarker_ctext-clip::-csstools-invalid-first-letter::-webkit-details-marker {
      text-overflow: clip;
    }
"
`;

exports[`vite > v4-vite-postcss > js 1`] = `
"(function polyfill() {
  const relList = document.createElement("link").relList;
  if (relList && relList.supports && relList.supports("modulepreload")) return;
  for (const link of document.querySelectorAll('link[rel="modulepreload"]')) processPreload(link);
  new MutationObserver((mutations) => {
    for (const mutation of mutations) {
      if (mutation.type !== "childList") continue;
      for (const node of mutation.addedNodes) if (node.tagName === "LINK" && node.rel === "modulepreload") processPreload(node);
    }
  }).observe(document, {
    childList: true,
    subtree: true
  });
  function getFetchOpts(link) {
    const fetchOpts = {};
    if (link.integrity) fetchOpts.integrity = link.integrity;
    if (link.referrerPolicy) fetchOpts.referrerPolicy = link.referrerPolicy;
    if (link.crossOrigin === "use-credentials") fetchOpts.credentials = "include";
    else if (link.crossOrigin === "anonymous") fetchOpts.credentials = "omit";
    else fetchOpts.credentials = "same-origin";
    return fetchOpts;
  }
  function processPreload(link) {
    if (link.ep) return;
    link.ep = true;
    const fetchOpts = getFetchOpts(link);
    fetch(link.href, fetchOpts);
  }
})();
console.log("bg-[#123456] text-[#123456]");
"
`;
